name:                miso-samegame
version:             0.1.0.0
synopsis:            SameGame written in GHCJS + Miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable samegame
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , lens
                     , miso
                     , mwc-random
                     , safe
                     , split
                     , transformers
  default-language:    Haskell2010
